src/objects/Case_Project__c.object
<CustomObject>
    <description>To track specific case projects in SFDC</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Engineering_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Blacklist_status__c</fullName>
        <defaultValue>IF($RecordType.Name = &quot;Bug40451&quot;,&quot;Opened&quot;, 
IF($RecordType.Name = &quot;ReplGroup1&quot;,&quot;Opened&quot;,IF($RecordType.Name = &quot;Engineering Defect&quot;,&quot;Opened&quot;,IF($RecordType.Name = &quot;Ops/RMA Type&quot;,&quot;Opened&quot;,IF($RecordType.Name = &quot;TCP/IP Bad Segment&quot;,&quot;Opened&quot;,&quot;&quot;)))))</defaultValue>
        <label>Blacklist status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bug40451_Customer_Contacted__c</fullName>
        <description>Has customer been contacted with a live phone call (email/vm doesn&apos;t count)</description>
        <inlineHelpText>Has customer been contacted with a live phone call (email/vm doesn&apos;t count)</inlineHelpText>
        <label>Customer Contacted Live</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bug40451_Downstream_updated_release__c</fullName>
        <description>What safe version has the downstream array been updated to?</description>
        <inlineHelpText>What safe version has the downstream array been updated to?</inlineHelpText>
        <label>Downstream updated release</label>
        <picklist>
            <picklistValues>
                <fullName>1.4.7.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.4.8.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.4.9.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.4.10.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not yet updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not required - upstream will be updated instead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bug40451_Recovery_Approach__c</fullName>
        <description>What approach are we taking for the recovery of the downstream snapshots?</description>
        <inlineHelpText>What approach are we taking for the recovery of the downstream snapshots?</inlineHelpText>
        <label>Recovery Approach</label>
        <picklist>
            <picklistValues>
                <fullName>Re-Replicate entire volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Replicate from last common good snapshot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Replicate last good and entire volume both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use 1.4.10.0 to auto repair next snapshot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not yet determined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volume checksum OK - no recovery needed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bug40451_Seed_Array_Required__c</fullName>
        <description>Is a seed array required to assist with the recovery plan?</description>
        <inlineHelpText>Is a seed array required to assist with the recovery plan?</inlineHelpText>
        <label>Seed Array Required</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not determined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bug40451_Upstream_updated_release__c</fullName>
        <description>What safe version has the upstream array been updated to?</description>
        <inlineHelpText>What safe version has the upstream array been updated to?</inlineHelpText>
        <label>Upstream updated release</label>
        <picklist>
            <picklistValues>
                <fullName>1.4.7.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.4.8.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.4.9.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.4.10.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not yet updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not required - downstream will be updated instead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bug40451_number_of_volumes_affected__c</fullName>
        <defaultValue>&quot;TBD&quot;</defaultValue>
        <description>How many volumes were identified as suspect?</description>
        <inlineHelpText>How many volumes were identified as suspect? Count ALL suspect volumes even if they didn&apos;t need repairing (e.g. they may have self-corrected)</inlineHelpText>
        <label>Number of suspect volumes</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Engineering_Projects</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Eng_Were_instructions_for_TSE_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Were instructions for TSE completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fixed_Version__c</fullName>
        <defaultValue>IF($RecordType.Name = &quot;Bug40451&quot;,&quot;V1.0.1&quot;, 
IF($RecordType.Name = &quot;ReplGroup1&quot;,&quot;V1.0.1&quot;,IF($RecordType.Name = &quot;Engineering Defect&quot;,&quot;V1.0.1&quot;,IF($RecordType.Name = &quot;Ops/RMA Type&quot;,&quot;V1.0.1&quot;,IF($RecordType.Name = &quot;TCP/IP Bad Segment&quot;,&quot;V1.0.1&quot;,&quot;&quot;)))))</defaultValue>
        <label>Fixed Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grp1_Bug40451_Account_team_in_the_loop__c</fullName>
        <description>Has the Nimble account team for this customer been informed about this case.</description>
        <inlineHelpText>Has the Nimble account team for this customer been informed about this case.</inlineHelpText>
        <label>Account team in the loop</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grp1_Bug40451_Customer_Reaction__c</fullName>
        <description>How has customer responded to this issue</description>
        <inlineHelpText>How has customer responded to this issue</inlineHelpText>
        <label>Customer Reaction</label>
        <picklist>
            <picklistValues>
                <fullName>Customer not yet contacted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Calm - understanding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annoyed - but ok</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upset at first - ok now</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upset - may need intervention</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grp1_Customer_responded__c</fullName>
        <description>Customer has contacted us in response to the case and we now have the case actively being worked by TSE</description>
        <inlineHelpText>Customer has contacted us in response to the case and we now have the case actively being worked by TSE</inlineHelpText>
        <label>Customer responded</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grp1_HB_Alert_AutoSupport_Status__c</fullName>
        <description>It&apos;s imperative we get ALL systems sending AutoSupports and eartbeats and email alerts</description>
        <inlineHelpText>It&apos;s imperative we get ALL systems sending AutoSupports and heartbeats and email alerts. Please make sure these are working if you are engaged with customer for this case and verify receipt.</inlineHelpText>
        <label>Status of HB, Alert, AutoSupport</label>
        <picklist>
            <picklistValues>
                <fullName>Have not discussed with customer</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Discussed with customer and they WILL NOT enable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discussed with customer and they WILL enable (have not verified it&apos;s working)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified everything is now sending to Nimble</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grp1_Recovery_Approach__c</fullName>
        <description>Select approach used to de-risk array 

1.4.9.0 is they have never replicated - ensure they can;t hit the issue later on 
1.4.10 then 1.4.11 - ensures everything is corrected and is a necessary step before going to 2.0</description>
        <inlineHelpText>No Action needed - never replicated and on 1.4.9 or 2.0.6 already 
Update to 1.4.9.0 - never replicated. 
Update to 1.4.10 then 1.4.11 - ensure potential out of sync snaps are corrected</inlineHelpText>
        <label>Recovery Approach</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No Action needed - never replicated and on 1.4.9 or 2.0.6 already</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Action needed - Replicated but not susceptible to condition and on 1.4.9.0/2.0.6.1 already</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update to 1.4.9.0 - never replicated.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update to 1.4.9.0/2.0.6.x - Replicated but not susceptible to condition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update to 1.4.10 then 1.4.11 - ensure potential out of sync snaps are corrected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grp1_Recovery_Verified__c</fullName>
        <description>Verified recovery approach has been completed</description>
        <inlineHelpText>Only set to Yes if you have written verification or Heartbeats or Autosupports verifying all recovery steps are completed and they run NO risk of out of sync snapshots</inlineHelpText>
        <label>Recovery Verified</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grp1_Replicating_now_or_ever__c</fullName>
        <description>Has this array ever been in a replication relationship</description>
        <inlineHelpText>Has this array ever been in a replication relationship</inlineHelpText>
        <label>Replicating now or ever</label>
        <picklist>
            <picklistValues>
                <fullName>Unknow</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ops_Was_an_onsite_SE_scheduled__c</fullName>
        <label>Was an onsite SE scheduled?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Array__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Partner asset SN</description>
        <label>Partner Array</label>
        <referenceTo>Asset</referenceTo>
        <relationshipName>Engineering_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Description_Url__c</fullName>
        <defaultValue>IF($RecordType.Name = &quot;Bug40451&quot;,&quot;http://en.wikipedia.org/wiki/Wikipedia?Bug40451&quot;, 
IF($RecordType.Name = &quot;ReplGroup1&quot;,&quot;http://en.wikipedia.org/wiki/Wikipedia?ReplGroup1&quot;,
IF($RecordType.Name = &quot;Engineering Defect&quot;,&quot;http://en.wikipedia.org/wiki/Wikipedia?EngineeringDefect&quot;,
IF($RecordType.Name = &quot;Ops/RMA Type&quot;,&quot;http://en.wikipedia.org/wiki/Wikipedia?Ops/RMAType&quot;,
IF($RecordType.Name = &quot;TCP/IP Bad Segment&quot;,&quot;http://en.wikipedia.org/wiki/Wikipedia?TCP/IPBadSegment&quot;,
IF($RecordType.Name = &quot;Eventd Process Dead&quot;, &quot;N/A&quot;,
IF($RecordType.Name = &quot;Security - Internet Vulnerability&quot;, &quot;N/A&quot;,
IF($RecordType.Name = &quot;Missing Disk on System Partition&quot;, &quot;N/A&quot;,
IF($RecordType.Name = &quot;iSCSI timeout&quot;, &quot;https://in.nimblestorage.com/twiki/bin/view/Support/ISCSITimeout&quot;,
&quot;&quot;)))))))))</defaultValue>
        <label>Project Description URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <defaultValue>IF($RecordType.Name = &quot;Bug40451&quot;,&quot;Enter Bug40451 Description&quot;,
IF($RecordType.Name = &quot;ReplGroup1&quot;,&quot;Enter ReplGroup1 Description&quot;,
IF($RecordType.Name = &quot;Engineering Defect&quot;,&quot;Enter Engineering Defect Description&quot;,
IF($RecordType.Name = &quot;Ops/RMA Type&quot;,&quot;Enter Ops/RMA Type Description&quot;,
IF($RecordType.Name = &quot;TCP/IP Bad Segment&quot;,&quot;Enter TCP/IP Bad Segment Description&quot;,
IF($RecordType.Name = &quot;Eventd Process Dead&quot;, &quot;Array IPs are accessible from Internet and must be blocked for security reasons&quot;,
IF($RecordType.Name = &quot;Security - Internet Vulnerability&quot;, &quot;Array IPs are accessible from Internet and must be blocked for security reasons&quot;,
IF($RecordType.Name = &quot;Missing Disk on System Partition&quot;, &quot;Internal system disk partition is degraded&quot;,
IF($RecordType.Name = &quot;iSCSI timeout&quot;, &quot;Enter iSCSI timeout Description&quot;,&quot;&quot;
)))))))))</defaultValue>
        <label>Project Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TCP_Is_iSCSI_digest_turned_on__c</fullName>
        <label>Is iSCSI digest turned on?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TCP_Was_there_a_performance_hit__c</fullName>
        <label>Was there a performance hit from turning</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TSE_Instructions_Url__c</fullName>
        <defaultValue>IF($RecordType.Name = &quot;Bug40451&quot;,&quot;http://en.wikipedia.org/wiki/Wikipedia?Bug40451&quot;, 
IF($RecordType.Name = &quot;ReplGroup1&quot;,&quot;http://en.wikipedia.org/wiki/Wikipedia?ReplGroup1&quot;,
IF($RecordType.Name = &quot;Engineering Defect&quot;,&quot;http://en.wikipedia.org/wiki/Wikipedia?EngineeringDefect&quot;,
IF($RecordType.Name = &quot;Ops/RMA Type&quot;,&quot;http://en.wikipedia.org/wiki/Wikipedia?Ops/RMAType&quot;,
IF($RecordType.Name = &quot;TCP/IP Bad Segment&quot;,&quot;http://en.wikipedia.org/wiki/Wikipedia?TCP/IPBadSegment&quot;,
IF($RecordType.Name = &quot;Eventd Process Dead&quot;, &quot;https://in.nimblestorage.com/twiki/bin/view/Support/EventdDeadInstructions&quot;,
IF($RecordType.Name = &quot;Security - Internet Vulnerability&quot;, &quot;https://in.nimblestorage.com/twiki/bin/view/Support/SecurityVulnerability01&quot;,
IF($RecordType.Name = &quot;Missing Disk on System Partition&quot;, &quot;https://in.nimblestorage.com/twiki/bin/view/Support/MD18Partition&quot;,
IF($RecordType.Name = &quot;iSCSI timeout&quot;, &quot;https://in.nimblestorage.com/twiki/bin/view/Support/ISCSITimeout&quot;,&quot;&quot;
)))))))))</defaultValue>
        <label>TSE Instructions URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TSE_Instructions__c</fullName>
        <defaultValue>IF($RecordType.Name = &quot;Bug40451&quot;,&quot;Enter Bug40451 TSE Instruction&quot;, 
IF($RecordType.Name = &quot;ReplGroup1&quot;,&quot;Enter ReplGroup1 TSE Instruction&quot;,
IF($RecordType.Name = &quot;Engineering Defect&quot;,&quot;Enter Engineering Defect TSE Instruction&quot;,
IF($RecordType.Name = &quot;Ops/RMA Type&quot;,&quot;Enter Ops/RMA Type TSE Instruction&quot;,
IF($RecordType.Name = &quot;TCP/IP Bad Segment&quot;,&quot;Enter TCP/IP Bad Segment TSE Instruction&quot;,
IF($RecordType.Name = &quot;Eventd Process Dead&quot;, &quot;Enter Eventd Process Dead Instruction&quot;,
IF($RecordType.Name = &quot;Security - Internet Vulnerability&quot;, &quot;Enter Security - Internet Vulnerability Instruction&quot;,
IF($RecordType.Name = &quot;Missing Disk on System Partition&quot;, &quot;Enter Missing Disk on System Partition Instruction&quot;,
IF($RecordType.Name = &quot;iSCSI timeout&quot;, &quot;Enter iSCSI timeout Instruction&quot;,&quot;&quot;
)))))))))</defaultValue>
        <label>TSE Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Engineering</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Case Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Case Project-{00000000}</displayFormat>
        <label>Case Project Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Projects</pluralLabel>
    <recordTypes>
        <fullName>Bug40451</fullName>
        <active>true</active>
        <description>Status fields for cases dealing with bug 40451</description>
        <label>Bug40451</label>
    </recordTypes>
    <recordTypes>
        <fullName>Eventd_Process_Dead</fullName>
        <active>true</active>
        <label>Eventd Process Dead</label>
    </recordTypes>
    <recordTypes>
        <fullName>MD_D18_Partition</fullName>
        <active>true</active>
        <description>Fixup MD_D18 partitions after failed disk</description>
        <label>MD_D18 Partition</label>
    </recordTypes>
    <recordTypes>
        <fullName>Missing_Disk_on_System_Partition</fullName>
        <active>true</active>
        <label>Missing Disk on System Partition</label>
    </recordTypes>
    <recordTypes>
        <fullName>ReplGroup1</fullName>
        <active>true</active>
        <description>Object to track cases for Bug 40451 Group 1C and 1D</description>
        <label>ReplGroup1</label>
    </recordTypes>
    <recordTypes>
        <fullName>Security_Internet_Vulnerability</fullName>
        <active>true</active>
        <label>Security - Internet Vulnerability</label>
    </recordTypes>
    <recordTypes>
        <fullName>TCP_IP_Bad_Segment</fullName>
        <active>true</active>
        <description>Record Type to TCP/IP Bad Segment</description>
        <label>TCP/IP Bad Segment</label>
    </recordTypes>
    <recordTypes>
        <fullName>iSCSI_timeout</fullName>
        <active>true</active>
        <label>iSCSI timeout</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>